# nvim-mep

./: .clangd  .gitignore  README.md  TODO.org  compile_commands.json  default.nix  flake.nix  hello.nix  icat.nix  justfile  playground.nix  shell.nix
nix/: mkNeovim.nix  neovim-overlay.nix
nvim/: init.lua
nvim/ftplugin/: bash.lua  c.lua  cpp.lua  fortran.lua  java.lua  lua.lua  nix.lua  org.lua  python.lua  r.lua  sh.lua
nvim/lua/overseer/template/user/: cpp_build.lua
nvim/lua/user/misenplacecolors/: colors.lua
nvim/plugin/: aerial.lua  autocommands.lua  codecompanion.lua  conform.lua  dashboard.lua  flash.lua  heirline.lua  just.lua  keymaps.lua  lsp-progress.lua  lualine.lua  luasnip.lua  nerdtree.lua  none-ls.lua  nvim-bqf.lua  nvim-surround.lua  nvim-tree.lua  orgmode.lua  other.lua  overseer.lua  slime.lua  telescope.lua  text-case.lua  todo-comments.lua  treesitter.lua  url-open.lua  which-key.lua
playground/R/: playground.R
playground/bash/: playground.bash
playground/cpp/: CMakeLists.txt  compile_commands.json  justfile  main  main.cpp
playground/haskell/: flake.nix  justfile  playground  playground.hs  shell.nix
playground/javascript/: test.js
playground/nix/: default.nix  eval.nix  hello.nix  justfile  map.sh
playground/python/: playground.py  python.py
